Fix contactUs form styling bleeding over

--- a/src/routes/contactUs/contactUs.module.css
+++ b/src/routes/contactUs/contactUs.module.css
@@ -20,7 +20,7 @@
     overflow-wrap: break-word;
 }
 
-form {
+.form {
     max-width: 708px;
     width: 100%;
     background: #fff;
@@ -137,7 +137,7 @@ select.field:invalid {
     font-weight: bold;
 }
 
-form button {
+.form button {
     width: 100%;
     height: 55px;
     background: #284d8a;
@@ -156,11 +156,11 @@ form button {
     gap: 5px;
 }
 
-form button:hover {
+.form button:hover {
     background: #204279;
 }
 
-form button:disabled {
+.form button:disabled {
     opacity: 0.6;
     cursor: not-allowed;
 }
@@ -204,7 +204,7 @@ form button:disabled {
     }
 
     .contact,
-    form,
+    .form,
     .form-fields,
     .address {
         gap: var(--content-gap-tablet);
@@ -222,7 +222,7 @@ form button:disabled {
         max-width: 952px;
     }
 
-    form {
+    .form {
         max-width: 952px;
         padding: var(--content-gap-tablet) var(--gutter);
     }
@@ -241,7 +241,7 @@ form button:disabled {
     }
 
     .contact,
-    form,
+    .form,
     .form-fields,
     .address {
         gap: var(--content-gap-mobile);
@@ -255,7 +255,7 @@ form button:disabled {
         gap: var(--para-gap-mobile);
     }
 
-    form {
+    .form {
         max-width: 608px;
         padding: var(--content-gap-mobile) var(--gutter);
     }
